<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddCourse"
    android:background="@color/default_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:id="@+id/linearLayout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/add_course_title"
            android:id="@+id/textView"
            android:textSize="28sp"
            android:textIsSelectable="false"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_course_name_label"
        android:id="@+id/add_course_name_label"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:layout_margin="5dp"
        style="@style/input_labels"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/courseNameEditText"
        android:layout_below="@+id/add_course_name_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ffffff"
        android:layout_margin="5dp"
        style="@style/input_fields"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/professor_label"
        android:id="@+id/professor_name_label"
        android:layout_below="@+id/courseNameEditText"
        android:layout_alignLeft="@+id/courseNameEditText"
        android:layout_alignStart="@+id/courseNameEditText"
        style="@style/input_labels"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/professorEditText"
        style="@style/input_fields"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/professor_name_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/button"
            android:layout_gravity="bottom"
            style="@style/button_style"
            android:layout_weight="1"
            android:padding="5dp"
            android:onClick="addCourse"/>

    </LinearLayout>
</RelativeLayout>
